@@ -1,3 +1,8 @@
+Fri Nov 19 19:12:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
+          Changed generation of DDS_TYPE traits
+
 Fri Nov 19 17:50:57 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/fe/lex.yy.cpp:
